Added organ grinder functionality